Fix overflow property in dayItems to enable vertical scrolling

--- a/src/style.scss
+++ b/src/style.scss
@@ -238,10 +238,10 @@ body {
   &__dayItems {
     display: flex;
     flex-direction: column;
-    overflow-x: auto;
+    overflow-y: auto;
     align-items: center;
     justify-content: start;
-    overflow-y: auto;
+
     width: 370px;
     height: 100%;
     padding: 15px 15px 15px 15px;
